# uivonim

./: .babelrc  .gitignore  .gitmodules  .ignore  .npmignore  .prettierignore  .prettierrc.json  README.md  TODO.md  electron-builder.yml  package-lock.json  package.json  webpack.config.js  webpack.dev.js  webpack.prod.js
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  test.yml  typecheck.yml
msdf-atlas/: binding.gyp  package-lock.json  package.json
msdf-atlas/src/: Atlas.h  FontHolder.h  addon.cc
runtime/: uivonim.vim
runtime/colors/: veonim.vim
runtime/darwin/: vvim
src/: colorize-with-highlight.ts  cursor.ts  ext-ui.tsx  helpers.ts  index.ts  tsconfig.json  types.ts  utils.ts  workspace.ts
src-tauri/: Cargo.toml  blah.txt  tauri.conf.json
src-tauri/src/: commands.rs  helpers.rs  main.rs  neovim_handler.rs
src/renderer/: Cargo.toml  cursor.ts  dispatch.ts  helpers.ts  highlight-attributes.ts  index.ts  redraw.ts  title.ts  workspace.ts
src/renderer/components/: filetype-icon.tsx  icon.tsx  loading.tsx  overlay.tsx  plugin-container.tsx  row-container.tsx  text-input.tsx
src/renderer/components/extensions/: buffers.tsx  color-picker.tsx  explorer.tsx  grep.tsx  highlight.ts  lsp-code-action.tsx  lsp-hover.tsx  lsp-references.tsx  lsp-signature-help.tsx  minimap.tsx
src/renderer/components/extensions/future/: files.tsx  generic-prompt.tsx
src/renderer/components/extensions/legacy/: debug.ts  grep.tsx  user-overlay-menu.ts
src/renderer/components/memes/: nc.tsx
src/renderer/components/nvim/: autocomplete.tsx  command-line.tsx  message-history.tsx  messages.tsx  search.tsx  statusline.tsx
src/renderer/render/: Cargo.toml  canvas-renderer.ts  events.ts  font-atlas.ts  font-texture-atlas.ts  highlight-attributes.ts  redraw.ts  renderer.ts
src/renderer/render/src/: font_atlas.rs  fs.glsl  grid.rs  lib.rs  webgl.rs
src/renderer/render/src/webgl/: mod.rs  types.rs  vs.glsl
src/renderer/render/tests/: font_atlas.rs  grid.rs
src/renderer/render/webgl/: grid-buffer.ts  renderer.ts  text-bg.ts  text-fg.ts  utils.ts
src/renderer/render/webgl/shaders/: fg-frag.glsl  fg-vert.glsl  text-bg-frag.glsl  text-bg-vert.glsl  text-fg-frag.glsl  text-fg-vert.glsl
src/renderer/src/: api.rs  grid.rs  lib.rs
src/renderer/src/webgl/: font_atlas.rs  mod.rs
src/renderer/src/webgl/shaders/: background-vert.glsl  foreground-frag.glsl
src/renderer/support/: utils.ts
src/renderer/tests/: font_atlas.rs
src/renderer/ui/: checkboard.ts  color-picker.tsx  css.ts  lose-focus.ts  styles.ts  uikit.ts  vanilla.ts
src/renderer/windows/: metadata.ts  nameplate.tsx  sizer.ts  window-manager.ts  window.ts
test/: nvim-for-test.js  util.js
tools/: build-prod.js  build.js  gen-api.js  package.js  profile.js  runner.js  setup-mirrors.js  start-release.js  start.js  transform-no-dev.js
(+285 files in other folders)
