[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
font-kit = "0.10.1"
async-trait = "0.1.50"
serde_json = "1.0"
futures = "0.3.16"
rmpv = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
# TODO(smolck): Is "full" features necessary here?
tokio = { version = "0.2", features = ["full"] }
nvim-rs = { version = "0.2.0", features = ["use_tokio"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
